# TOPP

./: CMakeLists.txt
eclipse/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
src/: .project  CMakeLists.txt  TOPP.cpp  TOPP.h  TOPPbindings.cpp  Trajectory.cpp  Trajectory.h
src/python/: ClosedChain.py  QuadraticConstraints.py  TOPPopenravepy.py  TOPPpy.py  Trajectory.py  Utilities.py  __init__.py
tests/: .gdb_history  SO3.py  kinematic_limits.py  kinematic_limits_viapoints_script.py
tests/TOPP/: TOPPpy.py  Trajectory.py  Utilities.py
